33808exp222/33808exp222_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: b33808exp222-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: billydev.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: b33808exp222-wrap11031exp003service
                port:
                  number: 8080
